--- a/src/WingetGUI/Views/SearchPackagesPage.xaml
+++ b/src/WingetGUI/Views/SearchPackagesPage.xaml
@@ -7,7 +7,17 @@
     xmlns:controls="using:CommunityToolkit.WinUI.UI.Controls"
     mc:Ignorable="d">
 
-    <Grid x:Name="ContentArea">
+    <StackPanel x:Name="ContentArea" Orientation="Vertical">
+        <StackPanel Orientation="Horizontal" Margin="5">
+            <AutoSuggestBox Width="300"
+                            Text="{x:Bind ViewModel.Search, Mode=TwoWay}"
+                            QuerySubmitted="{x:Bind ViewModel.SearchSubmitted}"
+                            PlaceholderText="Search for a package"
+                            IsEnabled="{x:Bind ViewModel.CanSearch, Mode=OneWay}"
+                            QueryIcon="Find">
+            </AutoSuggestBox>
+            <ProgressRing IsActive="{x:Bind ViewModel.Searching, Mode=OneWay}" Margin="10, 0, 0, 0" />
+        </StackPanel>
         <controls:DataGrid
             AutoGenerateColumns="False"
             GridLinesVisibility="Horizontal"
@@ -16,25 +26,11 @@
                 <SolidColorBrush x:Key="DataGridColumnHeaderBackgroundColor" Color="Transparent" />
             </controls:DataGrid.Resources>
             <controls:DataGrid.Columns>
-                <!-- TODO: Replace column definitions to match real data. Consider adding Header values to Resources.resw. -->
-                <controls:DataGridTextColumn Binding="{Binding OrderID}" Header="OrderID" />
-                <controls:DataGridTextColumn Binding="{Binding OrderDate}" Header="OrderDate" />
-                <controls:DataGridTextColumn Binding="{Binding Company}" Header="Company" />
-                <controls:DataGridTextColumn Binding="{Binding ShipTo}" Header="ShipTo" />
-                <controls:DataGridTextColumn Binding="{Binding OrderTotal}" Header="OrderTotal" />
-                <controls:DataGridTextColumn Binding="{Binding Status}" Header="Status" />
-                <controls:DataGridTemplateColumn Header="Symbol">
-                    <controls:DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <FontIcon
-                                HorizontalAlignment="Left"
-                                FontFamily="{ThemeResource SymbolThemeFontFamily}"
-                                Glyph="{Binding Symbol}"
-                                AutomationProperties.Name="{Binding SymbolName}" />
-                        </DataTemplate>
-                    </controls:DataGridTemplateColumn.CellTemplate>
-                </controls:DataGridTemplateColumn>
+                <controls:DataGridTextColumn Binding="{Binding Id}" Header="Package ID" Tag="Id" />
+                <controls:DataGridTextColumn Binding="{Binding Name}" Header="Name" Tag="Name" SortDirection="Ascending" />
+                <controls:DataGridTextColumn Binding="{Binding Version}" Header="Version" Tag="Version" />
+                <controls:DataGridTextColumn Binding="{Binding Publisher}" Header="Publisher" Tag="Publisher" />
             </controls:DataGrid.Columns>
         </controls:DataGrid>
-    </Grid>
+    </StackPanel>
 </Page>
