Fixed search page XAML

--- a/src/WingetGUI/Views/SearchPackagesPage.xaml
+++ b/src/WingetGUI/Views/SearchPackagesPage.xaml
@@ -5,7 +5,13 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:CommunityToolkit.WinUI.UI.Controls"
+    xmlns:converters="using:CommunityToolkit.WinUI.UI.Converters"
     mc:Ignorable="d">
+
+    <Page.Resources>
+        <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" TrueValue="Visible" FalseValue="Collapsed"/>
+        <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverterInverted" TrueValue="Collapsed" FalseValue="Visible"/>
+    </Page.Resources>
 
     <StackPanel x:Name="ContentArea" Orientation="Vertical">
         <StackPanel Orientation="Horizontal" Margin="5">
