--- a/src/WingetGUI/Views/InstalledPage.xaml
+++ b/src/WingetGUI/Views/InstalledPage.xaml
@@ -1,10 +1,11 @@
 ﻿<Page
-    x:Class="WingetGUI.Views.SearchPackagesPage"
+    x:Class="WingetGUI.Views.InstalledPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:CommunityToolkit.WinUI.UI.Controls"
+    xmlns:primitives="using:CommunityToolkit.WinUI.UI.Controls.Primitives"
     xmlns:converters="using:CommunityToolkit.WinUI.UI.Converters"
     mc:Ignorable="d">
 
@@ -12,35 +13,53 @@
         <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" TrueValue="Visible" FalseValue="Collapsed"/>
         <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverterInverted" TrueValue="Collapsed" FalseValue="Visible"/>
     </Page.Resources>
-
-    <StackPanel x:Name="ContentArea" Orientation="Vertical">
-        <StackPanel Orientation="Horizontal" Margin="5">
-            <AutoSuggestBox Width="300"
-                            Text="{x:Bind ViewModel.Search, Mode=TwoWay}"
-                            QuerySubmitted="{x:Bind ViewModel.SearchSubmitted}"
-                            PlaceholderText="Search for a package"
-                            IsEnabled="{x:Bind ViewModel.CanSearch, Mode=OneWay}"
-                            QueryIcon="Find">
-            </AutoSuggestBox>
-            <ProgressRing IsActive="{x:Bind ViewModel.Searching, Mode=OneWay}" Margin="10, 0, 0, 0" />
+    
+    <Grid x:Name="ContentArea" RowDefinitions ="100,*">
+        <StackPanel Orientation="Horizontal" Grid.Row="0">
+            <ComboBox ItemsSource="{x:Bind ViewModel.Catalogues}" Header="Catalogue" Width="200" SelectedValue="{x:Bind ViewModel.PackageCatalogName, Mode=TwoWay}"/>
+            <ProgressRing IsActive="{x:Bind ViewModel.Loading, Mode=TwoWay}" Grid.Row="0" Margin="10, 0, 0, 0" />
         </StackPanel>
         <controls:DataGrid
+            Grid.Row="1"
             AutoGenerateColumns="False"
             GridLinesVisibility="Horizontal"
+            Sorting="DataGrid_Sorting"
             ItemsSource="{x:Bind ViewModel.Source, Mode=OneWay}">
             <controls:DataGrid.Resources>
                 <SolidColorBrush x:Key="DataGridColumnHeaderBackgroundColor" Color="Transparent" />
             </controls:DataGrid.Resources>
             <controls:DataGrid.Columns>
+                <controls:DataGridTemplateColumn Header="" Width="70" CanUserSort="False" CanUserResize="false" CanUserReorder="false" SortDirection="{x:Null}">
+                    <controls:DataGridTemplateColumn.HeaderStyle>
+                        <Style TargetType="primitives:DataGridColumnHeader">
+                            <Setter Property="Margin" Value="0,0,0,0"/>
+                            <Setter Property="Padding" Value="0,0,0,0"/>
+                            <Setter Property="ContentTemplate">
+                                <Setter.Value>
+                                    <DataTemplate>
+                                        <CheckBox Click="CheckBox_Click" />
+                                    </DataTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </controls:DataGridTemplateColumn.HeaderStyle>
+                    <controls:DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <CheckBox IsChecked="{Binding Selected, Mode=TwoWay}"/>
+                        </DataTemplate>
+                    </controls:DataGridTemplateColumn.CellTemplate>
+                </controls:DataGridTemplateColumn>
+
                 <controls:DataGridTextColumn Binding="{Binding Id}" Header="Package ID" Tag="Id" />
                 <controls:DataGridTextColumn Binding="{Binding Name}" Header="Name" Tag="Name" SortDirection="Ascending" />
                 <controls:DataGridTextColumn Binding="{Binding Version}" Header="Version" Tag="Version" />
+                <controls:DataGridTextColumn Binding="{Binding NextVersion}" Header="NextVersion" Tag="NextVersion" />
                 <controls:DataGridTextColumn Binding="{Binding Publisher}" Header="Publisher" Tag="Publisher" />
-                <controls:DataGridTemplateColumn Header="Install" MinWidth="250">
+                <controls:DataGridTemplateColumn Header="Upgrade" MinWidth="250">
                     <controls:DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Vertical" Margin="2">
-                                <Button Command="{Binding InstallCommand}" Visibility="{Binding Path=Installing, Converter={StaticResource BoolToVisibilityConverterInverted}}">Install</Button>
+                                <Button Command="{Binding UpgradeCommand}" Visibility="{Binding Path=Installing, Converter={StaticResource BoolToVisibilityConverterInverted}}">Upgrade</Button>
                                 <TextBlock Text="{Binding ProgressLabel}" Visibility="{Binding Path=Installing, Converter={StaticResource BoolToVisibilityConverter}}" />
                                 <ProgressBar Value="{Binding ProgressPercentage}" Visibility="{Binding Path=Installing, Converter={StaticResource BoolToVisibilityConverter}}" />
                             </StackPanel>
@@ -49,5 +68,5 @@
                 </controls:DataGridTemplateColumn>
             </controls:DataGrid.Columns>
         </controls:DataGrid>
-    </StackPanel>
+    </Grid>
 </Page>
